--- a/_posts/2024-11-21-ecc.md
+++ b/_posts/2024-11-21-ecc.md
@@ -5,9 +5,9 @@ title: 誤り訂正符号とは?
 #thumbnail-img: /assets/img/thumb.png
 #share-img: /assets/img/path.jpg
 tags: [誤り訂正符号]
+mathjax: true
 ---
-<script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax:{inlineMath:[['$','$'],['\(','\)']],processEscapes:true},CommonHTML: {matchFontHeight:false}});</script>
-<script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+
 
 # 誤り訂正符号
 
