--- a/_posts/ecc/2024-11-21-ecc.md
+++ b/_posts/ecc/2024-11-21-ecc.md
@@ -13,12 +13,15 @@ mathjax: true
 
 誤り訂正符号とは, 文字列にあえて冗長に表現することによってノイズに対する頑健性を付与する手法です.
 
-<center><img src="/assets/img/postfig/code.drawio.png" width="500px"></center>
+<center><img src="/figure/hadamard.drawio.png" width="500px"></center>
+
+
+<center><img src="/figure/code.drawio.png" width="500px"></center>
 
 
 数学的には誤り訂正符号は空間に最も効率よく固定半径のボールを詰め込む方法を表し, 組合せ論などでも深く研究されています.
 
-<center><img src="/assets/img/postfig/code2.drawio.png" width="400px"></center>
+<center><img src="/figure/code/code2.drawio.png" width="400px"></center>
 
 
 このページ全体では, 符号化のプロセスが線型写像で表せる特殊ケースを常に考え, 組合せ論などの文脈でよく考えられる, いわゆる「球を多く詰め込む」という文脈で考える符号の特殊ケースを符号と呼んでいきます.
