--- a/_posts/ecc/2024-11-23-hadamard.md
+++ b/_posts/ecc/2024-11-23-hadamard.md
@@ -8,9 +8,12 @@ tags: [誤り訂正符号]
 mathjax: true
 ---
 
-# アダマール符号
+[ecc]: {% post_url /_posts/ecc/2024-11-21-ecc %}
 
-アダマール符号は計算量の文脈においては最も基本的な符号の一つで, 非常に高い誤り訂正能力を持つ一方でレートは指数的に乏しいという欠点を持っています.
+
+# アダマール符号とは?
+
+アダマール符号は計算量の文脈においては最も基本的な[誤り訂正符号][ecc]の一つで, 非常に高い誤り訂正能力を持つ一方でレートは指数的に乏しいという欠点を持っています.
 
 {: .box-note}
 **定義.** 
@@ -18,7 +21,7 @@ mathjax: true
   $$  \mathcal{C}_n = \{ (f(z))_{z\in \mathbb{F}_2^n} \colon f \in \mathcal{F}_n \} $$
 によって定まる符号$\mathcal{C}_n\subseteq \mathbb{F}_2^{2^n}$を <span style="color: tomato;">**アダマール符号 (Hadamard code)**</span> という.
 
-![アダマール符号の例]({{ 'assets/img/postfig/hadamard.drawio.png' | relative_url }})
+<center><img src="/figure/hadamard.drawio.png" width="500px"></center>
 
 アダマール符号では, $n$ビットのメッセージ$c\in \mathbb{F}_2^n$ に対し, それを係数に持つ線形関数 $f\colon x\mapsto c^\top x$ と同一視し, 全ての$z\in \mathbb{F}_2^n$における評価値$f(z)$を並べたベクトルを$c$の符号化したものとします.
 つまり, $n$ビットの文字列を$2^n$ビットの文字列に写しています.
