--- a/_posts/graph/2024-11-20-graph.md
+++ b/_posts/graph/2024-11-20-graph.md
@@ -83,7 +83,7 @@ $$
     
 ## 例
 
-<center><img src="/assets/img/postfig/graph1.drawio.png" width="30%"></center>
+<center><img src="/figure/graph1.drawio.png" width="30%"></center>
 
 上記の図で与えられる構造は
 
@@ -97,7 +97,7 @@ $$
 で与えられるグラフ$G=(V,E)$で表現できます.
 このグラフは四つの頂点と四つの辺からなるグラフで, 頂点$1,2$の次数は$2$, 頂点$3$の次数は$3$, 頂点$4$の次数は$1$です.
 
-![graph2]({{ 'assets/img/postfig/graph2.drawio.png' | relative_url }})
+<center><img src="/figure/graph1.drawio.png" width="30%"></center>
 
 
 上のグラフは, いわゆる複数の連結成分からなるものグラフです. 直感的には複数のグラフとみたいところですが, これも一つのグラフとして表現されます.
