--- a/_posts/ecc/2024-11-23-hadamard.md
+++ b/_posts/ecc/2024-11-23-hadamard.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: アダマール符号
+subtitle: 非常に強い誤り訂正能力と冗長性を持つ最も基本的な誤り訂正符号
 #cover-img: /assets/img/
 #thumbnail-img: /assets/img/thumb.png
 #share-img: /assets/img/path.jpg
