--- a/_posts/graph/2024-11-20-graph.md
+++ b/_posts/graph/2024-11-20-graph.md
@@ -10,16 +10,19 @@ mathjax: true
 
 # グラフ
 
-ここでは基本的にグラフといえば有限単純無向グラフを考えます. 有限集合 $V$ と $k\in\mathbb{N}$ に対し$\binom{V}{k}$を $V$ の $k$ 元部分集合族, すなわち
+ここでは基本的にグラフといえば有限単純無向グラフを考えます. 非空な有限集合 $V$ と $k\in\mathbb{N}$ に対し$\binom{V}{k}$を $V$ の $k$ 元部分集合族, すなわち
 
 $$\begin{align*}\binom{V}{k} = \{S\subseteq V\colon |S|=k\}\end{align*}$$
 
-とします.
+とします ($k>|V|$ならば$\binom{V}{k}=\emptyset$とする).
 
 {: .box-note}
-**定義.** 有限集合 $V$ および $E \subseteq \binom{V}{2}$ に対し, 組 $(V,E)$ を<span style="color: tomato;">**グラフ (graph)**</span>という.
+**定義.** 非空な有限集合 $V$ および $E \subseteq \binom{V}{2}$ に対し, 組 $(V,E)$ を<span style="color: tomato;">**グラフ (graph)**</span>という.
 集合 $V$ を頂点集合と呼び, その元を  <span style="color: tomato;">**頂点 (vertex または node)**</span>  と呼ぶ.
 集合 $E$ を辺集合と呼び, その元を  <span style="color: tomato;">**辺 (edge)**</span>  という.
+
+頂点集合$V$が単一の頂点からなる場合もあるが, そのような時は$E=\emptyset$である.
+また, $$E=\empsyset$$の場合は空グラフ (empty graph) と呼ぶこともある.
 
 頂点 $v$ と 辺 $e$ が $v\in e$ を満たすとき, $v$ は $e$ に<span style="color: tomato;">**接続 (incident) している**</span>という.
 二頂点 $u,v$ が $\{u,v\}\in E$ を満たすとき, $u$ と $v$ は <span style="color: tomato;">**隣接 (adjacent)**</span> しているという.
