--- a/_posts/ecc/2024-11-21-ecc.md
+++ b/_posts/ecc/2024-11-21-ecc.md
@@ -28,7 +28,7 @@ mathjax: true
 
 # 定義
 
-{: .box-note}
+{: .box-def}
 **定義.** 
 $\mathbb{F}$を有限体, $n$ を自然数とする. 部分空間 $\mathcal{C}\subseteq \mathbb{F}^n$ を <span style="color: tomato;">**線形符号 (linear code)**</span> ともしくは単に <span style="color: tomato;">**符号 (code)**</span> という.  符号の元 $x\in\mathcal{C}$ を <span style="color: tomato;">**符号語 (codeword)**</span> と呼び, $n$ を <span style="color: tomato;">**符号語長**</span> もしくは <span style="color: tomato;">**ブロック長**</span> という.
 
