--- a/_posts/ecc/2024-11-23-hadamard.md
+++ b/_posts/ecc/2024-11-23-hadamard.md
@@ -1,7 +1,6 @@
 ---
 layout: post
 title: アダマール符号
-subtitle: 非常に強い誤り訂正能力と冗長性を持つ最も基本的な誤り訂正符号
 #cover-img: /assets/img/
 #thumbnail-img: /assets/img/thumb.png
 #share-img: /assets/img/path.jpg
@@ -14,9 +13,9 @@ mathjax: true
 
 # アダマール符号とは?
 
-アダマール符号は計算量の文脈においては最も基本的な[誤り訂正符号][ecc]の一つで, 非常に高い誤り訂正能力を持つ一方でレートは指数的に乏しいという欠点を持っています.
+アダマール符号は計算量の文脈においては最も基本的な[誤り訂正符号][ecc]の一つで, 非常に強い冗長性を課すことにより非常に高い誤り訂正能力を得るという性質を持っています.
 
-{: .box-note}
+{: .box-def}
 **定義.** 
 自然数$n\in \mathbb{N}$に対し, $\mathcal{F}_n\subseteq\{ f\colon \mathbb{F}_2^2\to \mathbb{F}_2\}$ を $n$ 変数線形関数の全体とする. このとき,
   $$  \mathcal{C}_n = \{ (f(z))_{z\in \mathbb{F}_2^n} \colon f \in \mathcal{F}_n \} $$
@@ -33,7 +32,7 @@ $\mathcal{F}_n$の基底を考えてみましょう. 各$i\in[n]$に対して$f_
 
 アダマール符号の距離については以下が成り立ちます.
 
-{: .box-warning}
+{: .box-prop}
 **命題.** 
 全ての $n\in \mathbb{N}$に対し, アダマール符号 $\mathcal{C}_n$ の距離は$1/2$である.
 
