--- a/_posts/graph/2024-11-20-graph.md
+++ b/_posts/graph/2024-11-20-graph.md
@@ -1,28 +1,37 @@
 ---
 layout: post
 title: グラフの基礎概念
-cover-img: /assets/img/path.jpg
-thumbnail-img: /assets/img/thumb.png
-share-img: /assets/img/path.jpg
+cover-img: /assets/img/graph-header.png
+thumbnail-img: /assets/img/graph-thumb.png
+share-img: /assets/img/graph-thumb.png
 tags: [グラフ]
 mathjax: true
 ---
 
 # グラフ
 
+グラフとはネットワークの構造を数学的に抽象化した概念です.
+<figure>
+  <center>
+  <img src="/figure/network.png" width="500px">
+  <figcaption>ランダムに500個の点を$[0,1]^2$上に配置し, ユークリッド距離がある閾値以下となる頂点間に辺を引いて得られるグラフ. ランダム幾何グラフという.</figcaption>
+  </center>
+</figure>
+
 ここでは基本的にグラフといえば有限単純無向グラフを考えます. 非空な有限集合 $V$ と $k\in\mathbb{N}$ に対し$\binom{V}{k}$を $V$ の $k$ 元部分集合族, すなわち
 
 $$\begin{align*}\binom{V}{k} = \{S\subseteq V\colon |S|=k\}\end{align*}$$
 
-とします ($k>|V|$ならば$\binom{V}{k}=\emptyset$とする).
+とします (ただし, $k>\lvert V \rvert$ならば$\binom{V}{k}=\emptyset$とします).
 
-{: .box-note}
+{: .box-def}
 **定義.** 非空な有限集合 $V$ および $E \subseteq \binom{V}{2}$ に対し, 組 $(V,E)$ を<span style="color: tomato;">**グラフ (graph)**</span>という.
 集合 $V$ を頂点集合と呼び, その元を  <span style="color: tomato;">**頂点 (vertex または node)**</span>  と呼ぶ.
 集合 $E$ を辺集合と呼び, その元を  <span style="color: tomato;">**辺 (edge)**</span>  という.
 
-頂点集合$V$が単一の頂点からなる場合もあるが, そのような時は$E=\emptyset$である.
-また, $$E=\empsyset$$の場合は空グラフ (empty graph) と呼ぶこともある.
+辺集合が空の場合は空グラフ (empty graph) と呼ぶこともあります.
+例えば頂点集合$V$が単一の頂点からなる場合は常に $E=\emptyset$ です.
+
 
 頂点 $v$ と 辺 $e$ が $v\in e$ を満たすとき, $v$ は $e$ に<span style="color: tomato;">**接続 (incident) している**</span>という.
 二頂点 $u,v$ が $\{u,v\}\in E$ を満たすとき, $u$ と $v$ は <span style="color: tomato;">**隣接 (adjacent)**</span> しているという.
@@ -40,7 +49,7 @@ $$
 
 とします.
 
-{: .box-note}
+{: .box-def}
 **定義.** 
 有限集合 $V$ および $\vec E \subseteq (V)_2$ の組 $(V,\vec{E})$ を <span style="color: tomato;">**有向グラフ (directed graph)**</span> という. 集合 $\vec{E}$ の元を <span style="color: tomato;">**有向辺 (directed edge)**</span> または <span style="color: tomato;">**孤 (arc)**</span> と呼ぶ.
 また, 有向辺 $\vec e= (u,v)$ に対し, $u$ を $\vec e$ の <span style="color: tomato;">**始点 (tail)**</span>, $v$ を $\vec e$ の <span style="color: tomato;">**終点 (head)**</span> と呼ぶ.
@@ -55,7 +64,7 @@ $$
 
   頂点 $v \in V$ に接続している辺の個数を頂点 $v$ の <span style="color: tomato;">**次数 (degree)**</span> と呼び, $\deg_G(v)$ で表します. グラフ $G$ が明らかな場合は単に $\deg(v)$ で表します. 以下の事実がよく知られています.
 
-  {: .box-warning}
+  {: .box-prop}
   **命題 (握手補題).** 
   任意のグラフ $G=(V,E)$ に対し, 全頂点の次数の総和は辺の本数の2倍に等しい.
 
@@ -79,9 +88,9 @@ $$
 
   有向グラフ $\vec G=(V,\vec E)$ に対しても同様に定義できる. すなわち, 頂点列 $(u_0,\dots,u_\ell)$ であって, 全ての$i=0,1,\dots,\ell-1$ に対して $(u_i,u_{i+1})\in \vec E$ であるものを路 または <span style="color: tomato;">**有向路 (directed path)**</span> という.
     
-> **補足1.** 文献によって路, パス, 閉路, サイクルの用語や定義は様々です (例えば路を歩道と呼ぶこともあります). 教科書を呼ぶ場合はその都度, 定義を確認することを推奨します.
-    
-> **補足2.** 頂点列ではなく, 頂点と辺の交互列 $(u_0,e_1,u_1,\dots,e_\ell,u_\ell)$ を路と定めることもあります. これは, 考えるグラフが多重辺を含んでいて, 同じ頂点を経由していても辿る辺が異なる経路を区別する場合に考えます.    
+{: .box-rem}
+<p><b>注釈.</b> 文献によって路, パス, 閉路, サイクルの用語や定義は様々です (例えば路を歩道と呼ぶこともあります). 教科書を呼ぶ場合はその都度, 定義を確認することを推奨します.<br>
+また, 頂点列ではなく, 頂点と辺の交互列 $(u_0,e_1,u_1,\dots,e_\ell,u_\ell)$ を路と定めることもあります. これは, 考えるグラフが多重辺を含んでいて, 同じ頂点を経由していても辿る辺が異なる経路を区別する場合に考えます.</p>
 
     
 ## 例
@@ -134,18 +143,20 @@ $$
 グラフの各頂点の隣接関係を表現する基本的な行列です.
 
 
-{: .box-note}
-**定義.** 
+{: .box-def}
+<div>
+<b>定義.</b>
 グラフ $G=(V,E)$ に対し, 
   $$
   \begin{align*}
     A(u,v) = \begin{cases}
-    1 & \text{if }\{u,v\}\in E\\
+    1 & \text{if }\{u,v\}\in E,\\
     0 & \text{otherwise}
     \end{cases}
   \end{align*}
   $$
-で定まる行列 $$A\in \{0,1\}^{V\times V}$$ を <span style="color: tomato;">**隣接行列 (adjacency matrix)**</span> という.
+で定まる行列 $A\in \{0,1\}^{V\times V}$ を <span style="color: tomato;"><b>隣接行列 (adjacency matrix)</b></span> という.
+</div>
 
 - 考えるグラフが無向ならば, その隣接行列は常に対称行列です.
 - 有向グラフにも同様に隣接行列を定義することができます. この時, 隣接行列は必ずしも対称ではありません.
@@ -154,34 +165,40 @@ $$
 
 グラフの頂点と辺の接続関係を表現する基本的な行列です.
 
-{: .box-note}
-**定義.** 
-有向グラフ $\vec G=(V,\vec E)$ を考える. 
- $$
+{: .box-def}
+<div>
+<b>定義.</b>
+有向グラフ $\vec G=(V,\vec E)$ に対し,
+$$
 L(w,\vec e)=\begin{cases}
 -1 & \text{if $w$ は $\vec e$ の始点},\\
 1 & \text{if $w$ は $\vec e$ の終点},\\
 0 & \text{otherwise}.
 \end{cases}
- $$
-で定まる行列 $$L\in \{ 0,1,-1 \}^{V\times \vec E}$$ を <span style="color: tomato;">**接続行列 (incident matrix)**</span> という.
+$$
+で定まる行列 $L\in \{ 0,1,-1 \}^{V\times \vec E}$ を <span style="color: tomato;"><b>接続行列 (incident matrix) </b></span> という.
+</div>
+
 
  無向グラフ $G=(V,E)$ に対し, 各辺を任意に向きをつけて得られる有向グラフの接続行列 $L$ を$G$の <span style="color: tomato;">**接続行列**</span>
   という ($G$ の接続行列は一意に定まらないことに注意せよ).
 
 
-## 正規化された隣接行列
+## 正規化された隣接行列 (遷移確率行列)
 
 ランダムウォークの文脈では, 隣接行列の行和を1に正規化して得られる行列をよく考えます.
 
-{: .box-note}
-**定義.** グラフ$G=(V,E)$に対し,
+{: .box-def}
+<div>
+<b>定義.</b>
+グラフ$G=(V,E)$に対し,
 $$
 P(u,v)=\begin{cases}
-\frac{1}{\deg(u)} & \text{if }\{u,v\}\in E\\
+\frac{1}{\deg(u)} & \text{if }\{u,v\}\in E,\\
 0 & \text{otherwise}
 \end{cases}
 $$
-で定まる行列 $P\in[0,1]^{V\times V}$ を <span style="color: tomato;">**正規化された隣接行列 (normalized adjacency matrix)**</span> という.
+で定まる行列 $P\in[0,1]^{V\times V}$ を <span style="color: tomato;"><b>正規化された隣接行列 (normalized adjacency matrix)</b></span> という.
+</div>
 
-- グラフが有向か無向かに関わらず, 正規化された隣接行列の全ての行和は常に$1$です. このような行列を <span style="color: tomato;">**確率行列 (stochastic matrix)**</span>といいます.
+グラフが有向か無向かに関わらず, 正規化された隣接行列の全ての行和は常に$1$です. このような行列を <span style="color: tomato;">**確率行列 (stochastic matrix)**</span>といいます.
