--- a/_posts/graph/2024-11-24-expander.md
+++ b/_posts/graph/2024-11-24-expander.md
@@ -1,16 +1,17 @@
 ---
 layout: post
 title: エクスパンダーグラフ
-subtitle: ランダムウォークが早く混交するグラフ
-categories: graph
+cover-img: /assets/img/graph-header.png
+thumbnail-img: /assets/img/graph-thumb.png
+share-img: /assets/img/graph-thumb.png
+tags: [グラフ, エクスパンダー]
 mathjax: true
-tags: [グラフ,エクスパンダー]
 ---
 
 エクスパンダーグラフとは, ランダムウォークの混交が非常に早いという強力な性質を持つグラフの総称で,
 誤り訂正符号や計算量理論などの擬似ランダムネスの文脈で幅広く応用されています.
 
-{: .box-note}
+{: .box-def}
 **定義 (エクスパンダーグラフ).**
 頂点数$n$のグラフ$G=(V,E)$ に対し, その<a href="/2024-11-20-graph/#正規化された隣接行列">正規化された隣接行列</a>
 $P\in[0,1]^{V\times V}$ の固有値 $1=\lambda_1\ge \lambda_2\ge \dots \ge \lambda_n \ge -1$ に対して
@@ -19,25 +20,30 @@ $$
 $$
 とする. パラメータ $\lambda\in[0,1]$ に対し, $\lambda(P) \le \lambda$ を満たすグラフを <span style="color: tomato;">**$\lambda$-エクスパンダー ($\lambda$-expander)**</span> という.
 
-> 補足1. 無向グラフの隣接行列が対称行列となることから, 正規化された隣接行列も常に実固有値を持つことが示せます. 有向グラフでは必ずしも実固有値性は成り立ちません.
-
-> 補足2. 任意のグラフの正規化された隣接行列$P$は各行の行和が$1$に等しいため, 全成分$1$のベクトル $\mathbf{1}$に対して$P \mathbf{1} = \mathbf{1}$を満たします. このことから必ず$1$を固有値として持ちます. 実は固有値$1$が最大固有値となるため, 常に$\lambda_1=1$が成り立ちます.
+{: .box-rem}
+<div>
+<b>注釈.</b>
+<ul>
+<li> 無向グラフの隣接行列が対称行列となることから, 正規化された隣接行列も常に実固有値を持つことが示せます. 有向グラフでは必ずしも実固有値性は成り立ちません.</li>
+<li> 任意のグラフの正規化された隣接行列$P$は各行の行和が$1$に等しいため, 全成分$1$のベクトル $\mathbf{1}$に対して$P \mathbf{1} = \mathbf{1}$を満たします. このことから必ず$1$を固有値として持ちます. 実は固有値$1$が最大固有値となるため, 常に$\lambda_1=1$が成り立ちます.</li>
+</ul>
+</div>
 
 上記の定義では自明な第一固有値$\lambda_1=1$以外の固有値が絶対値の意味で小さいことを要請していますが, 第二固有値が小さいという性質のみを満たすグラフを片側エクスパンダーといいます.
 
-{: .box-note}
+{: .box-def}
 **定義 (片側エクスパンダーグラフ).**
 頂点数$n$のグラフ$G=(V,E)$ の<a href="/2024-11-20-graph/#正規化された隣接行列">正規化された隣接行列</a>
 $P\in[0,1]^{V\times V}$ の固有値 $1=\lambda_1\ge \lambda_2\ge \dots \ge \lambda_n \ge -1$ に対して, $|\lambda_2| \le \lambda$を満たすグラフを <span style="color: tomato;">**片側$\lambda$-エクスパンダー ($\lambda$-expander)**</span> という.
 
 一般に$\lambda$が小さいほど高いエクスパンダー性を持つとみなします. 
 
-# 例
-## 完全グラフ
+# エクスパンダーグラフの例
+### 完全グラフ
 $n$頂点の[完全グラフ]({% post_url /2024-11-24-complete-graph %})
   の正規化された隣接行列$P$は, 単に行列$I$と全成分$1$の行列$J$を用いて, $P=\frac{1}{n-1}(J-I)$と表せます. 第一ベクトルは $\mathbf{1}$ であり, 他の固有ベクトル$x$は全て$\mathbf{1}$に直交するため$J \mathbf{1} = 0$です. 従って$Px = -\frac{1}{n-1}x$となるため, 第一以外の固有値は全て$-\frac{1}{n-1}$なので, 完全グラフ$K_n$は$\frac{1}{n-1}$-エクスパンダーです.
 
-## 閉路グラフ
+### 閉路グラフ
 頂点数$n$の閉路グラフとは, 頂点集合$$V=\{ 0,\dots,n-1 \}$$
 に対して辺集合
 が $$E= \{\{v0,v1\},\dots,\{v_{n−2},v_{n-1}\},\{v_{n-1},v_0\}\}$$ で与えられるグラフ$(V,E)$である. 頂点数$n$が偶数のとき, 閉路グラフは二部グラフとなります.
