--- a/_posts/ecc/2024-11-23-hadamard.md
+++ b/_posts/ecc/2024-11-23-hadamard.md
@@ -8,12 +8,7 @@ tags: [誤り訂正符号]
 mathjax: true
 ---
 
-[ecc]: {% post_url /_posts/ecc/2024-11-21-ecc %}
-
-
-# アダマール符号とは?
-
-アダマール符号は計算量の文脈においては最も基本的な[誤り訂正符号][ecc]の一つで, 非常に強い冗長性を課すことにより非常に高い誤り訂正能力を得るという性質を持っています.
+アダマール符号は計算量の文脈においては最も基本的な[誤り訂正符号]({% post_url /_posts/ecc/2024-11-21-ecc %})の一つで, 非常に強い冗長性を課すことにより非常に高い誤り訂正能力を得るという性質を持っています.
 
 {: .box-def}
 **定義.** 
