--- a/_posts/graph/2024-11-20-graph.md
+++ b/_posts/graph/2024-11-20-graph.md
@@ -8,9 +8,9 @@ tags: [グラフ]
 mathjax: true
 ---
 
-# グラフ
+グラフとはネットワークの構造を数学的に抽象化した概念で, 化学の化合物の表現, 道路交通網, インターネット, 地図など, 至る場面に現れる重要な離散構造です.
 
-グラフとはネットワークの構造を数学的に抽象化した概念です.
+
 <figure>
   <center>
   <img src="/figure/network.png" width="500px">
